# Fusion-3D-CNN

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
Fusion3DNet/: __init__.py  dataset.py  features.py  plots.py
Fusion3DNet/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: architecture.mmd  features.md  index.md  roadmap.md
notebooks/: clip_vs_dino.ipynb  fusion_cad_train.ipynb  notebook_setup.py  ssl_brepnet_modeling.ipynb  ssl_brepnet_train.ipynb  ssl_graph_brep_train.ipynb  test_notebooks.ipynb  test_vit_train.ipynb
occwl/: base.py  compound.py  face.py  io.py
src/data_loader/: custom_dataset.py  custom_dataset_v2.py
src/features/: brepnet_extractor.py  dino_extractor.py
src/modeling/1D_CNN/: features.py
src/modeling/BRepNet/: eval.py  features_extractor.py  metrics.py  searcher.py
src/modeling/SSL_BrepNet/: __init__.py  build_dataset_file.py  dataset.py  entity_mapper.py  extract_features.py  features.py  metrics.py  normlization.py  sdf_compute.py  searcher.py  train_ssl.py
src/modeling/ssl_graph_brep/: augment.py  config.py  inference.py  metrics.py  plots.py  train.py
src/modeling/vit/: clip_extractor.py  dino_extractor.py  metrics.py  searcher.py
src/modeling/vit_brep_ensemble/: search_simulator.py  train.py  train_enhanced.py
src/pipelines/: extr_feats_brepnet.py  extr_feats_dino.py
src/utils/: face_index_validator.py  file_utils.py  running_stats.py  scale_utils.py
src/visualization/: entity_mapper.py  jupyter_segmentation_viewer.py
tests/: test_data.py
(+25 files in other folders)
